@@ -101,20 +101,32 @@ class TalkServiceImplTest {
         speaker1.setId(1);
         speaker1.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Speaker1")));
 
+        Topic topic0 = new Topic();
+        topic0.setId(0);
+
+        Topic topic1 = new Topic();
+        topic1.setId(1);
+
         talk0 = new Talk();
         talk0.setId(0);
         talk0.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Name0")));
         talk0.setSpeakers(List.of(speaker0));
+        talk0.setResultTopic(topic0);
+        talk0.setLanguage("en");
 
         talk1 = new Talk();
         talk1.setId(1);
         talk1.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Name1")));
         talk1.setSpeakers(List.of(speaker1));
+        talk1.setResultTopic(topic1);
+        talk1.setLanguage("ru");
 
         talk2 = new Talk();
         talk2.setId(2);
         talk2.setName(List.of(new LocaleItem(Language.ENGLISH.getCode(), "Name2")));
         talk2.setSpeakers(List.of(speaker0, speaker1));
+        talk2.setResultTopic(topic1);
+        talk2.setLanguage("ru");
 
         event0 = new Event();
         event0.setId(0);
@@ -149,39 +161,46 @@ class TalkServiceImplTest {
     class GetTalksTest {
         private Stream<Arguments> data() {
             return Stream.of(
-                    arguments(null, null, null, null, Collections.emptyList()),
-                    arguments(0L, null, null, null, List.of(talk0)),
-                    arguments(0L, 0L, null, null, List.of(talk0)),
-                    arguments(null, null, "name", null, List.of(talk0, talk1, talk2)),
-                    arguments(null, null, "0", null, List.of(talk0)),
-                    arguments(null, null, "1", null, List.of(talk1)),
-                    arguments(null, null, "2", null, List.of(talk2)),
-                    arguments(null, null, "7", null, Collections.emptyList()),
-                    arguments(null, null, null, "speaker", List.of(talk0, talk1, talk2)),
-                    arguments(null, null, null, "0", List.of(talk0, talk2)),
-                    arguments(null, null, null, "1", List.of(talk1, talk2)),
-                    arguments(null, null, null, "7", Collections.emptyList()),
-                    arguments(null, null, "2", "0", List.of(talk2)),
-                    arguments(null, null, "0", "0", List.of(talk0)),
-                    arguments(null, null, "1", "0", Collections.emptyList()),
-                    arguments(null, 0L, null, null, List.of(talk0, talk1, talk2)),
-                    arguments(null, 0L, null, "0", List.of(talk0, talk2)),
-                    arguments(null, 0L, "0", null, List.of(talk0)),
-                    arguments(null, 0L, "0", "0", List.of(talk0)),
-                    arguments(0L, null, null, "0", List.of(talk0)),
-                    arguments(0L, null, "0", null, List.of(talk0)),
-                    arguments(0L, null, "0", "0", List.of(talk0)),
-                    arguments(0L, 0L, null, null, List.of(talk0)),
-                    arguments(0L, 0L, null, "0", List.of(talk0)),
-                    arguments(0L, 0L, "0", null, List.of(talk0)),
-                    arguments(0L, 0L, "0", "0", List.of(talk0))
+                    arguments(null, null, null, null, null, null, Collections.emptyList()),
+                    arguments(0L, null, null, null, null, null, List.of(talk0)),
+                    arguments(0L, 0L, null, null, null, null, List.of(talk0)),
+                    arguments(null, null, "name", null, null, null, List.of(talk0, talk1, talk2)),
+                    arguments(null, null, "0", null, null, null, List.of(talk0)),
+                    arguments(null, null, "1", null, null, null, List.of(talk1)),
+                    arguments(null, null, "2", null, null, null, List.of(talk2)),
+                    arguments(null, null, "7", null, null, null, Collections.emptyList()),
+                    arguments(null, null, null, "speaker", null, null, List.of(talk0, talk1, talk2)),
+                    arguments(null, null, null, "0", null, null, List.of(talk0, talk2)),
+                    arguments(null, null, null, "1", null, null, List.of(talk1, talk2)),
+                    arguments(null, null, null, "7", null, null, Collections.emptyList()),
+                    arguments(null, null, null, null, 0L, null, List.of(talk0)),
+                    arguments(null, null, null, null, 1L, null, List.of(talk1, talk2)),
+                    arguments(null, null, null, null, null, "en", List.of(talk0)),
+                    arguments(null, null, null, null, null, "ru", List.of(talk1, talk2)),
+                    arguments(null, null, "2", "0", null, null, List.of(talk2)),
+                    arguments(null, null, "0", "0", null, null, List.of(talk0)),
+                    arguments(null, null, "1", "0", null, null, Collections.emptyList()),
+                    arguments(null, 0L, null, null, null, null, List.of(talk0, talk1, talk2)),
+                    arguments(null, 0L, null, "0", null, null, List.of(talk0, talk2)),
+                    arguments(null, 0L, "0", null, null, null, List.of(talk0)),
+                    arguments(null, 0L, "0", "0", null, null, List.of(talk0)),
+                    arguments(0L, null, null, "0", null, null, List.of(talk0)),
+                    arguments(0L, null, "0", null, null, null, List.of(talk0)),
+                    arguments(0L, null, "0", "0", null, null, List.of(talk0)),
+                    arguments(0L, 0L, null, null, null, null, List.of(talk0)),
+                    arguments(0L, 0L, null, "0", null, null, List.of(talk0)),
+                    arguments(0L, 0L, "0", null, null, null, List.of(talk0)),
+                    arguments(0L, 0L, "0", "0", null, null, List.of(talk0)),
+                    arguments(0L, 0L, "0", "0", 0L, null, List.of(talk0)),
+                    arguments(0L, 0L, "0", "0", 0L, "en", List.of(talk0))
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void getTalks(Long eventTypeId, Long eventId, String talkName, String speakerName, List<Talk> expected) {
-            assertEquals(expected, talkService.getTalks(eventTypeId, eventId, talkName, speakerName));
+        void getTalks(Long eventTypeId, Long eventId, String talkName, String speakerName, Long topicId,
+                      String talkLanguage, List<Talk> expected) {
+            assertEquals(expected, talkService.getTalks(eventTypeId, eventId, talkName, speakerName, topicId, talkLanguage));
         }
     }
 
